--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "test:prompts": "tsx scripts/prompt-smoke-test.ts",
+    "test:prompts:run": "cross-env RUN_TESTS=1 tsx scripts/prompt-smoke-test.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
